# ai-document-assistant

./: .gitignore  LICENSE  README.md  app.py  config.py  pdf_processor.py  pyproject.toml  qa_chain.py  requirements.txt  vector_store.py
.streamlit/: config.toml
